[package]
name = "jlog"
version = "1.1.2"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
csv = "1.4.0"
directories = "6.0.0"
open = "5.3.5"
rusqlite = "0.40.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[profile.release]
opt-level = "z"
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1
